# weather_forecast

./: README.md
weather_frontend/: .gitignore
weather_frontend/src/: GeoInfo.java  Main.java  MainWeatherWidget.java  SmallWeatherWidget.java  WeatherData.java  WeatherProxy.java  WeatherWarnings.java  WeatherWidget.java
weather_proxy/: Cargo.toml
weather_proxy/src/: lib.rs  main.rs
